[package]
name = "lua-sourcemap"
version = "0.1.0"
edition = "2021"
description = "Source map generation for Lua compilers"
documentation = "https://github.com/typedlua/typedlua"
repository = "https://github.com/typedlua/lua-sourcemap"
license = "MIT"
keywords = ["lua", "sourcemap", "compiler"]
categories = ["development-tools", "parsing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[dev-dependencies]