[package]
name = "luanext-sourcemap"
version = "0.1.0"
edition = "2021"
description = "Source map generation for LuaNext compiler"
documentation = "https://github.com/forge18/luanext-sourcemap"
repository = "https://github.com/forge18/luanext-sourcemap"
license = "MIT"
keywords = ["lua", "luanext", "sourcemap", "compiler"]
categories = ["development-tools", "parsing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "1.0"

[dev-dependencies]